# hlc

./: CMakeLists.txt  CMakePresets.json  api.h  assign_trait.c  assign_trait.h  avl.c  avl.h  base.h  compare_trait.c  compare_trait.h  layout.c  layout.h  main.c  map.c  map.h  math.h  random.c  random.h  set.c  set.h  stack.h
traits/: assign.c  assign.h  compare.c  compare.h  delete.c  delete.h  destroy.c  destroy.h  reassign.c  reassign.h
